# ferrum-music-player-rs

./: Cargo.toml  LICENSE_GPLv3  LICENSE_MIT  README.md
src/: app.rs  common.rs  config.rs  lib.rs  main.rs  mpris.rs  player.rs  playlist.rs  track.rs
src/database/: mod.rs
src/database/migrations/: 001.sql
src/database/sql/: get_all_tracks.sql  upsert_track.sql
src/player/: mod.rs  mpris.rs  sink.rs  source.rs
src/ui/: control_panel.rs  controls.rs  cover_art.rs  media.rs  mod.rs  track_list.rs
