[package]
name = "egui-music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
eframe = { version = "0.32.1" }
font-kit = "0.14.3"
image = { version = "0.25.6", features = ["png", "jpeg"] }
rfd = { version = "0.15.3", features = ["xdg-portal"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"

[dependencies.lofty]
git = "https://github.com/Serial-ATA/lofty-rs.git"
rev = "4f81ef4596e4ef407fefd5c5f9129af4f212c7d9"

[dependencies.souvlaki]
version = "0.8.3"
default-features = false
features = ["use_zbus"]

[dependencies.rodio]
version = "0.21.1"
features = ["symphonia-flac", "symphonia-wav", "symphonia-mp3"]

[dependencies.egui_extras]
package = "egui_extras"
version = "0.32.1"
features = ["image", "svg"]

[profile.dev]
opt-level = 1
