[package]
name = "ferrum-music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dirs = "6.0.0"
font-kit = "0.14.3"
image = { version = "0.25.8", features = ["png", "jpeg"] }
parking_lot = "0.12"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
walkdir = "2.5.0"

[dependencies.eframe]
version = "0.33.3"
default-features = false
features = ["accesskit", "glow", "wayland", "default_fonts"]

[dependencies.lofty]
git = "https://github.com/Serial-ATA/lofty-rs.git"
rev = "2727c5ce65501dc57075e3995958ecdea1ea4569"

[dependencies.souvlaki]
version = "0.8.3"
default-features = false
features = ["use_zbus"]

[dependencies.rodio]
version = "0.21.1"
default-features = false
features = [
  "playback",
  "symphonia-flac",
  "symphonia-wav",
  "symphonia-pcm",
  "symphonia-mp3",
]

[dependencies.egui_extras]
package = "egui_extras"
version = "0.33.3"
features = ["image", "svg"]
